creer un archivo js para darle animacion a los videos

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="./css/flexbox.css">
     <title>AluraPlay</title>
     <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
+    <script src="index.js"></script>
 </head>
 
 <body>
@@ -194,7 +195,7 @@
     <!-- Para que se muestre el contenido de seccion de videos, remueve los simbolos de comentarios que estan en la linea 195 y 374 -->
      
     <ul class="videos__container">
-        <li class="videos__item">
+        <li class="videos__item" onmouseover="playVideo(this)" onmouseout="pauseVideo(this)">
             <iframe  width="100%"  height="72%" src="https://www.youtube.com/embed/PwheldW6V98?si=mJKUmresNkF_c4Q1" 
             title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             <div class="descripcion-video">
@@ -206,7 +207,7 @@
             </div>
         </li>
        
-        <li class="videos__item">
+        <li class="videos__item" onmouseover="playVideo(this)" onmouseout="pauseVideo(this)">
             <iframe  width="100%"  height="72%" src="https://www.youtube.com/embed/r5T2aO9YXb0?si=aHWokvcs63ff33l1" 
             title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             <div class="descripcion-video">
@@ -217,7 +218,7 @@
                 </div>
             </div>
         </li>
-        <li class="videos__item">
+        <li class="videos__item" onmouseover="playVideo(this)" onmouseout="pauseVideo(this)">
             <iframe  width="100%"  height="72%" src="https://www.youtube.com/embed/qBrlvcQjrCA?si=NtRiXE2M6UXFpuVy" 
             title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             <div class="descripcion-video">
@@ -228,7 +229,7 @@
                 </div>
             </div>
         </li>
-        <li class="videos__item">
+        <li class="videos__item" onmouseover="playVideo(this)" onmouseout="pauseVideo(this)">
             <iframe  width="100%"  height="72%" src="https://www.youtube.com/embed/xdzz3_WqFmE?si=K3vRJxqY2Xt9v2D4" 
             title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             <div class="descripcion-video">
@@ -239,7 +240,7 @@
                 </div>
             </div>
         </li>
-        <li class="videos__item">
+        <li class="videos__item" onmouseover="playVideo(this)" onmouseout="pauseVideo(this)">
             <iframe  width="100%"  height="72%"src="https://www.youtube.com/embed/DeM2Ak8tWFU?si=z9eTmcwKMhbGnOSM" 
             title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             <div class="descripcion-video">
@@ -250,7 +251,7 @@
                 </div>
             </div>
         </li>
-        <li class="videos__item">
+        <li class="videos__item" onmouseover="playVideo(this)" onmouseout="pauseVideo(this)">
             <iframe  width="100%"  height="72%" src="https://www.youtube.com/embed/b5M9ws0X3FQ?si=BByTwoZV_195ifW0"
              title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             <div class="descripcion-video">
@@ -259,7 +260,7 @@
                 <p>266 vistas - hace 2 meses</p>
             </div>
         </li>
-        <li class="videos__item">
+        <li class="videos__item" onmouseover="playVideo(this)" onmouseout="pauseVideo(this)">
             <iframe  width="100%"  height="72%" src="https://www.youtube.com/embed/1EJ69twpnMo?si=77XLahry_zDuc666"
              title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             <div class="descripcion-video">
@@ -270,7 +271,7 @@
                 </div>
             </div>
         </li>
-        <li class="videos__item">
+        <li class="videos__item" onmouseover="playVideo(this)" onmouseout="pauseVideo(this)">
             <iframe  width="100%"  height="72%" src="https://www.youtube.com/embed/SAusS82-xQ0?si=w0csFllv1LjuLs7O" 
             title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             <div class="descripcion-video">
@@ -281,7 +282,7 @@
                 </div>
             </div>
         </li>
-        <li class="videos__item">
+        <li class="videos__item" onmouseover="playVideo(this)" onmouseout="pauseVideo(this)">
             <iframe width="100%"  height="72%" src="https://www.youtube.com/embed/hNUuAYmGL1M?si=BLk4jJSDjyTHBoXO" 
             title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>></iframe>
             <div class="descripcion-video">
@@ -292,7 +293,7 @@
                 </div>
             </div>
         </li>
-        <li class="videos__item">
+        <li class="videos__item" onmouseover="playVideo(this)" onmouseout="pauseVideo(this)">
             <iframe width="100%"  height="72%" src="https://www.youtube.com/embed/AULPtYo25Lw?si=Cp7Ovqt-8SBA_3tj" 
             title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             <div class="descripcion-video">
@@ -303,7 +304,7 @@
                 </div>
             </div>
         </li>
-        <li class="videos__item">
+        <li class="videos__item" onmouseover="playVideo(this)" onmouseout="pauseVideo(this)">
             <iframe width="100%"  height="72%" src="https://www.youtube.com/embed/zOetOoeOrOg?si=R64GU4elwkU-ce7V" 
             title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             <div class="descripcion-video">
@@ -314,7 +315,7 @@
                 </div>
             </div>
         </li>
-        <li class="videos__item">
+        <li class="videos__item" onmouseover="playVideo(this)" onmouseout="pauseVideo(this)">
             <iframe width="100%"  height="72%" src="https://www.youtube.com/embed/VKj8MlylaPg?si=3nhakwSHEgqM_RL6" 
             title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             <div class="descripcion-video">
@@ -325,7 +326,7 @@
                 </div>
             </div>
         </li>
-        <li class="videos__item">
+        <li class="videos__item" onmouseover="playVideo(this)" onmouseout="pauseVideo(this)">
             <iframe width="100%"  height="72%" src="https://www.youtube.com/embed/CpL7-sbW2O0?si=nBPiodanhasOV7D8"
              title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             <div class="descripcion-video">
@@ -336,7 +337,7 @@
                 </div>
             </div>
         </li>
-        <li class="videos__item">
+        <li class="videos__item" onmouseover="playVideo(this)" onmouseout="pauseVideo(this)">
             <iframe width="100%"  height="72%" src="https://www.youtube.com/embed/QjOWz9avkg8?si=hLgmCHaYTWoHi03R" 
             title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             <div class="descripcion-video">
@@ -347,7 +348,7 @@
                 </div>
             </div>
         </li>
-        <li class="videos__item">
+        <li class="videos__item" onmouseover="playVideo(this)" onmouseout="pauseVideo(this)">
             <iframe width="100%"  height="72%" src="https://www.youtube.com/embed/PztCEdIJITY?si=5fxDg327jUp5TA_X" 
             title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             <div class="descripcion-video">
@@ -358,7 +359,7 @@
                 </div>
             </div>
         </li>
-        <li class="videos__item">
+        <li class="videos__item" onmouseover="playVideo(this)" onmouseout="pauseVideo(this)">
             <iframe width="100%"  height="72%" src="https://www.youtube.com/embed/3W983Q2NzRI?si=eCcE3jEyAUJu_tju" 
             title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             <div class="descripcion-video">
